--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.13",
     "@prisma/client": "^2.19.0",
+    "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
