--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
+  "trailingComma": "es5",
   "singleQuote": true,
-  "trailingComma": "all"
+  "tabWidth": 2,
+  "semi": true,
+  "useTabs": false
 }
