--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.13",
     "@prisma/client": "^2.19.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "moment": "^2.29.1",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
@@ -45,6 +49,8 @@
     "@types/jest": "^26.0.20",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.31",
+    "@types/passport": "^1.0.6",
+    "@types/passport-http": "^0.3.8",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
